--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./dist/index.js",
-    "watch": "tsc -watch"
+    "watch": "tsc -watch",
+    "start": "tsc && node ./dist/indes.js"
   },
   "keywords": [],
   "author": "",
