--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./dist/index.js",
     "watch": "tsc -watch",
-    "start": "tsc && node ./dist/indes.js"
+    "start": "tsc && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
